@@ -128,7 +128,7 @@ function getCurrentVersion($guid, $connection2, $version)
     $output .= "$(\"#status\").html('".__($guid, 'Version check failed').".') ;";
     $output .= '}';
     $output .= 'else {';
-    $output .= "if (parseFloat(data['version'])<=parseFloat('".$version."')) {";
+    $output .= "if (versionCompare(data['version'], '".$version."') <= 0) {";
     $output .= '$("#status").attr("class","success");';
     $output .= "$(\"#status\").html('".sprintf(__($guid, 'Version check successful. Your Gibbon installation is up to date at %1$s.'), $version).' '.sprintf(__($guid, 'If you have recently updated your system files, please check that your database is up to date in %1$sUpdates%2$s.'), "<a href=\'".$_SESSION[$guid]['absoluteURL']."/index.php?q=/modules/System Admin/update.php\'>", '</a>')."') ;";
     $output .= '}';
