@@ -67,6 +67,7 @@ v15.0.00
         Students: added a notification event for Application Form Accepted
         Students: added an option for logged-in users to link new Application Forms to an existing user or family
 		System Admin: increased length of Absolute URL and Absolute Path to 100 characters
+        System Admin: updated version check to handle semantic version numbers
 		Timetable: added ability to set and display text and background colour for timetable day headers
 		Timetable: adjusted font size for shorter lessons to allow display or facility name
 		Timetable Admin: added link from course view in Manage Courses & Classes to edit class enrolment
